[gd_scene load_steps=16 format=3 uid="uid://b3nyf8mg3xwej"]

[ext_resource type="Script" path="res://player/player.gd" id="1_eea4c"]
[ext_resource type="PackedScene" uid="uid://clwfx1a4xt3d1" path="res://player/character.tscn" id="2_t7s0y"]
[ext_resource type="Texture2D" uid="uid://dl4yg67dr7hpj" path="res://images/character/character.png" id="3_w71se"]
[ext_resource type="Texture2D" uid="uid://dvf8jo6hwpcdh" path="res://images/icons/dialog.png" id="4_drsud"]
[ext_resource type="Texture2D" uid="uid://csubsiji76a1p" path="res://images/icons/apple.png" id="5_1fv58"]
[ext_resource type="Texture2D" uid="uid://djtjvtpp8aan0" path="res://images/icons/TREE.png" id="6_l0hlx"]
[ext_resource type="Texture2D" uid="uid://b4nijekbu6jx5" path="res://images/icons/applew.png" id="7_00elo"]
[ext_resource type="Texture2D" uid="uid://c2dec6c75hdhn" path="res://images/icons/Uturn.png" id="8_x3f25"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0cey5"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n2s5f"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1lxxo"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_ntj7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/body/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_52ioe"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("character/body/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0155859, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.733333), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_glj01"]
_data = {
"RESET": SubResource("Animation_ntj7n"),
"hurtBlink": SubResource("Animation_52ioe")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xngf6"]
radius = 11.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_eea4c")

[node name="character" type="Node2D" parent="."]
z_index = 1

[node name="body" type="Sprite2D" parent="character"]
clip_children = 2
texture = ExtResource("3_w71se")

[node name="ColorRect" type="ColorRect" parent="character/body"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 0, 0, 0)

[node name="characterlook" parent="character" instance=ExtResource("2_t7s0y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_0cey5")
debug_color = Color(0.894118, 0.262745, 0.466667, 0.419608)

[node name="health" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="health"]
shape = SubResource("CircleShape2D_n2s5f")

[node name="interactions" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="interactions"]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactions/HurtBox"]
shape = SubResource("CircleShape2D_1lxxo")
debug_color = Color(0, 0.623529, 0.521569, 0.419608)

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_glj01")
}

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[node name="Node" type="Node" parent="."]

[node name="Apple message" type="Node2D" parent="."]
visible = false
z_index = 2
position = Vector2(0, -14)

[node name="NinePatchRect" type="NinePatchRect" parent="Apple message"]
offset_left = -10.0
offset_top = -6.0
offset_right = 10.0
offset_bottom = 5.0
texture = ExtResource("4_drsud")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="apple" type="Sprite2D" parent="Apple message"]
scale = Vector2(0.666667, 0.625)
texture = ExtResource("5_1fv58")

[node name="askapple" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="askapple"]
shape = SubResource("CircleShape2D_xngf6")

[node name="shout" type="Node2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -16)
scale = Vector2(1.5, 1.5)

[node name="NinePatchRect" type="NinePatchRect" parent="shout"]
offset_left = -20.0
offset_top = -6.0
offset_right = 20.0
offset_bottom = 5.0
texture = ExtResource("4_drsud")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Sprite2D2" type="Sprite2D" parent="shout"]
position = Vector2(-0.75, -1)
scale = Vector2(0.625, 0.625)
texture = ExtResource("6_l0hlx")

[node name="gotApple" type="Node2D" parent="."]
visible = false
z_index = 2
position = Vector2(7, 5)

[node name="NinePatchRect" type="NinePatchRect" parent="gotApple"]
offset_left = -5.0
offset_top = -3.0
offset_right = 8.0
offset_bottom = 7.0
texture = ExtResource("4_drsud")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Sprite2D" type="Sprite2D" parent="gotApple"]
position = Vector2(2, 1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_00elo")

[node name="backhome" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="NinePatchRect" type="NinePatchRect" parent="backhome"]
offset_left = 2.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = -4.0
texture = ExtResource("4_drsud")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Sprite2D" type="Sprite2D" parent="backhome"]
position = Vector2(11, -13)
scale = Vector2(0.875, 0.875)
texture = ExtResource("8_x3f25")

[connection signal="area_entered" from="interactions/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="interactions/HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="area_entered" from="askapple" to="." method="_on_askapple_area_entered"]
[connection signal="area_exited" from="askapple" to="." method="_on_askapple_area_exited"]
